[package]
authors = ["Kornel <pornel@pornel.net>"]
categories = ["multimedia::images", "command-line-utilities"]
description = "Tool that measures structural similarity between images using a multi-scale variant of the SSIM algorithm."
documentation = "https://docs.rs/dssim"
homepage = "https://kornel.ski/dssim"
include = ["README.md", "Cargo.toml", "src/*.rs", "LICENSE"]
keywords = ["ssim", "image", "comparison", "visual", "benchmark"]
license = "AGPL-3.0"
name = "dssim"
readme = "README.md"
repository = "https://github.com/kornelski/dssim.git"
version = "3.2.1"
edition = "2018"

[[bin]]
doctest = false
name = "dssim"
path = "src/main.rs"

[dependencies]
dssim-core = { path = "./dssim-core", version = "3.2", default-features = false }
imgref = "1.9.2"
getopts = "0.2.21"
rayon = { version = "1.5.1", optional = true }
rgb = "0.8.31"
lodepng = "3.5.2"
load_image = { version = "2.16.4", features = ["lcms2-static"] }

[features]
default = ["threads", "dssim-core/default", "no-macos-vimage"]
threads = ["rayon"]
avif = ["load_image/avif"]
webp = ["load_image/webp"]
webp-static = ["load_image/webp-static"]
no-macos-vimage = ["dssim-core/no-macos-vimage"]

[package.metadata.release]
consolidate-commits = true
consolidate-pushes = true
tag-message = ""
tag-name = "{{version}}"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = [
    "dssim-core"
]

[profile.dev]
opt-level = 1
debug = 1

[profile.release]
opt-level = 3
lto = "fat"
debug = false
panic = "abort"

[badges]
maintenance = { status = "actively-developed" }
