[package]
name = "clic-2021"
version = "0.1.0"
authors = ["Kornel <kornel@geekhood.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
concurrent_lru = "0.2.0"
csv = "1.1.6"
dssim-core = "3.1.0"
lodepng = "3.4.6"
rayon = "1.5.1"

[workspace]
