[package]
authors = ["Kornel <pornel@pornel.net>"]
categories = ["multimedia::images"]
description = "Library that measures structural similarity between images using a multi-scale variant of the SSIM algorithm."
documentation = "https://docs.rs/dssim-core"
homepage = "https://kornel.ski/dssim"
include = ["README.md", "Cargo.toml", "src/*.rs", "LICENSE"]
keywords = ["ssim", "image", "comparison", "objective", "metric"]
license = "AGPL-3.0"
name = "dssim-core"
readme = "README.md"
repository = "https://github.com/kornelski/dssim.git"
version = "3.1.0"
edition = "2018"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
imgref = "1.7.1"
itertools = "0.10.0"
rayon = "1.5.0"
rgb = "0.8.27"

[dev-dependencies]
lodepng = "3.4.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
