[package]
authors = ["Kornel <pornel@pornel.net>"]
categories = ["multimedia::images"]
description = "Library that measures structural similarity between images using a multi-scale variant of the SSIM algorithm."
documentation = "https://docs.rs/dssim-core"
homepage = "https://kornel.ski/dssim"
include = ["README.md", "Cargo.toml", "src/*.rs", "LICENSE"]
keywords = ["ssim", "image", "comparison", "objective", "metric"]
license = "AGPL-3.0"
name = "dssim-core"
readme = "README.md"
repository = "https://github.com/kornelski/dssim.git"
version = "3.2.6"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
imgref = "1.9.4"
itertools = "0.10.3"
rayon = { version = "1.6.0", optional = true }
rgb = "0.8.33"

[dev-dependencies]
lodepng = "3.7.0"

[features]
default = ["threads"]
threads = ["dep:rayon"]
no-macos-vimage = []
# internal for cargo-c only
capi = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# for use with https://lib.rs/cargo-c
[package.metadata.capi.library]
name = "dssim"
version = "3.0.0"

[package.metadata.capi.pkg_config]
name = "dssim"
filename = "dssim"

[package.metadata.capi.header]
name = "dssim"
subdirectory = ""
generation = false

[package.metadata.capi.install.include]
asset = [{from = "dssim.h"}]
